--- a/pytorch/dige/1.ipynb
+++ b/pytorch/dige/1.ipynb
@@ -2,10 +2,703 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0986e-24, 4.5796e-41, 1.0360e-24],\n",
+       "        [4.5796e-41, 1.0361e-24, 4.5796e-41],\n",
+       "        [1.0451e-24, 4.5796e-41, 1.0009e-24],\n",
+       "        [4.5796e-41, 9.5415e-25, 4.5796e-41],\n",
+       "        [9.7026e-25, 4.5796e-41, 9.7038e-25]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.empty(5,3)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0168, 0.3407, 0.3221],\n",
+       "        [0.6120, 0.0057, 0.1294],\n",
+       "        [0.6823, 0.0903, 0.1984],\n",
+       "        [0.4241, 0.1888, 0.4807],\n",
+       "        [0.1142, 0.7430, 0.1228]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.rand(5,3)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.zeros(5,3,dtype=torch.long)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1., 1.],\n",
+       "        [1., 1., 1.],\n",
+       "        [1., 1., 1.],\n",
+       "        [1., 1., 1.],\n",
+       "        [1., 1., 1.]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = x.new_ones(5,3,dtype = torch.double)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 3])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.1679, 1.4250, 1.5143],\n",
+       "        [1.5836, 1.1470, 1.8971],\n",
+       "        [1.6346, 1.6546, 1.1662],\n",
+       "        [1.2857, 1.4555, 1.8977],\n",
+       "        [1.0205, 1.5446, 1.9860]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = torch.rand(5,3)\n",
+    "x + y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.1679, 1.4250, 1.5143],\n",
+       "        [1.5836, 1.1470, 1.8971],\n",
+       "        [1.6346, 1.6546, 1.1662],\n",
+       "        [1.2857, 1.4555, 1.8977],\n",
+       "        [1.0205, 1.5446, 1.9860]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.add(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1., 1., 1., 1., 1.], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 4]) torch.Size([16]) torch.Size([2, 8])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn(4,4)\n",
+    "y = x.view(16)\n",
+    "z = x.view(-1,8)\n",
+    "print(x.size(),y.size(),z.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Autograd 机制"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.3279, -0.5623,  0.5836,  0.6878],\n",
+       "        [-0.2983, -1.3592,  0.3576,  1.4544],\n",
+       "        [-0.7324, -0.3933, -0.9253,  2.2325]], requires_grad=True)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.randn(3,4,requires_grad=True)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.2721,  0.4063,  0.7116, -1.1060],\n",
+       "        [ 0.1950,  0.4343,  1.3776,  0.2678],\n",
+       "        [-0.8876, -0.4481, -1.4635, -1.1827]], requires_grad=True)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = torch.randn(3,4,requires_grad=True)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.0557, -0.1560,  1.2952, -0.4182],\n",
+       "        [-0.1034, -0.9249,  1.7352,  1.7222],\n",
+       "        [-1.6201, -0.8413, -2.3889,  1.0498]], grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = x+b\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(-0.5945, grad_fn=<SumBackward0>)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = t.sum()\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(15., dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = t.new_ones(5,3,dtype = torch.double)\n",
+    "q.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.backward()\n",
+    "b.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, True, True)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.requires_grad,b.requires_grad,t.requires_grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.rand(1)\n",
+    "b = torch.rand(1,requires_grad = True)\n",
+    "w = torch.rand(1,requires_grad=True)\n",
+    "y = w*x\n",
+    "z = y+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.is_leaf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.4310])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z.backward(retain_graph=True) # 如果不清空会累加起来\n",
+    "w.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1.])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 线性回归模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11, 1)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 构造一组输入数据x和对应的标签y\n",
+    "import numpy as np\n",
+    "x_values = [i for i in range(11)]\n",
+    "x_train = np.array(x_values, dtype=np.float32)\n",
+    "x_train = x_train.reshape(-1,1)\n",
+    "x_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11, 1)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_values = [2*i for i in x_values]\n",
+    "y_train = np.array(y_values, dtype=np.float32)\n",
+    "y_train = y_train.reshape(-1,1)\n",
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.],\n",
+       "       [ 1.],\n",
+       "       [ 2.],\n",
+       "       [ 3.],\n",
+       "       [ 4.],\n",
+       "       [ 5.],\n",
+       "       [ 6.],\n",
+       "       [ 7.],\n",
+       "       [ 8.],\n",
+       "       [ 9.],\n",
+       "       [10.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 线性回归就是一个不加激活函数的全连接层\n",
+    "import torch.nn as nn\n",
+    "class LinearRegressionModel(nn.Module):\n",
+    "    def __init__(self, input_dim, output_dim):\n",
+    "        super(LinearRegressionModel,self).__init__()\n",
+    "        self.linear = nn.Linear(input_dim,output_dim)\n",
+    "    \n",
+    "    def forward(self,x):\n",
+    "        out = self.linear(x)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dim = 1\n",
+    "output_dim =1\n",
+    "model = LinearRegressionModel(input_dim,output_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegressionModel(\n",
+       "  (linear): Linear(in_features=1, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 指定好参数和损失函数\n",
+    "epochs = 1000\n",
+    "learning_rate = 0.01\n",
+    "optimizer = torch.optim.SGD(model.parameters(),lr = learning_rate)\n",
+    "criterion = nn.MSELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 50, loss0.11394837498664856\n",
+      "epoch 100, loss0.06499189138412476\n",
+      "epoch 150, loss0.037068963050842285\n",
+      "epoch 200, loss0.02114272490143776\n",
+      "epoch 250, loss0.012059038504958153\n",
+      "epoch 300, loss0.006878036540001631\n",
+      "epoch 350, loss0.003922977950423956\n",
+      "epoch 400, loss0.0022375064436346292\n",
+      "epoch 450, loss0.0012761916732415557\n",
+      "epoch 500, loss0.0007278912235051394\n",
+      "epoch 550, loss0.00041515950579196215\n",
+      "epoch 600, loss0.0002367933193454519\n",
+      "epoch 650, loss0.00013505984679795802\n",
+      "epoch 700, loss7.703189476160333e-05\n",
+      "epoch 750, loss4.3935924622928724e-05\n",
+      "epoch 800, loss2.5058217943296768e-05\n",
+      "epoch 850, loss1.4293175809143577e-05\n",
+      "epoch 900, loss8.152200280164834e-06\n",
+      "epoch 950, loss4.649482434615493e-06\n",
+      "epoch 1000, loss2.65217181549815e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "for epoch in range(epochs):\n",
+    "    epoch+=1\n",
+    "    inputs = torch.from_numpy(x_train)\n",
+    "    labels = torch.from_numpy(y_train)\n",
+    "    \n",
+    "    optimizer.zero_grad()\n",
+    "    \n",
+    "    outputs = model(inputs)\n",
+    "    loss = criterion(outputs,labels)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    if epoch%50 == 0:\n",
+    "        print('epoch {}, loss{}'.format(epoch,loss.item()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.0293709e-03],\n",
+       "       [2.0025933e+00],\n",
+       "       [4.0021572e+00],\n",
+       "       [6.0017209e+00],\n",
+       "       [8.0012846e+00],\n",
+       "       [1.0000849e+01],\n",
+       "       [1.2000413e+01],\n",
+       "       [1.3999976e+01],\n",
+       "       [1.5999540e+01],\n",
+       "       [1.7999104e+01],\n",
+       "       [1.9998667e+01]], dtype=float32)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicted = model(torch.from_numpy(x_train).requires_grad_()).data.numpy()\n",
+    "predicted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tensor常见的形式有哪些\n",
+    "- 0:scalar\n",
+    "- 1:vector\n",
+    "- 2:matrix\n",
+    "- 3:n-dimensional tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#scalar 是一个数值"
+   ]
   }
  ],
  "metadata": {
