--- a/pytorch/bilibili/2FizzBuzz.ipynb
+++ b/pytorch/bilibili/2FizzBuzz.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "array([0, 0, 0, 0, 0, 1, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "        [1., 1., 1.,  ..., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "torch.Size([923])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,20 +234,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 1, 0, 0, 1, 0, 0, 1, 2, 0, 1, 0, 0, 3, 0, 0, 1, 0, 2, 0, 0,\n",
-       "       0, 0, 2, 0, 1, 0, 0, 3, 0, 1, 1, 1, 2, 1, 0, 1, 1, 2, 0, 1, 0, 0,\n",
-       "       3, 0, 0, 1, 0, 2, 1, 0, 0, 1, 2, 0, 1, 0, 0, 3, 0, 0, 1, 0, 0, 1,\n",
-       "       0, 0, 0, 2, 0, 1, 0, 0, 3, 1, 0, 1, 0, 2, 1, 0, 0, 1, 0, 2, 1, 0,\n",
-       "       0, 3, 0, 0, 0, 0, 2, 1, 0, 1, 1, 1])"
+       "array([1, 0, 1, 1, 1, 1, 0, 0, 1, 2, 0, 1, 0, 0, 3, 0, 0, 1, 0, 1, 1, 1,\n",
+       "       0, 1, 2, 0, 1, 0, 0, 3, 0, 1, 1, 1, 2, 1, 0, 1, 1, 2, 0, 1, 0, 0,\n",
+       "       3, 0, 0, 1, 0, 2, 1, 0, 0, 1, 2, 0, 1, 0, 0, 3, 0, 0, 1, 1, 1, 1,\n",
+       "       0, 1, 1, 1, 1, 1, 0, 1, 3, 2, 0, 2, 0, 1, 1, 0, 0, 1, 2, 1, 1, 0,\n",
+       "       0, 3, 0, 0, 1, 0, 2, 1, 0, 1, 1, 2])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', 'fizz', 'fizz', '4', '5', 'fizz', '7', '8', 'fizz', 'buzz', '11', 'fizz', '13', '14', 'fizzbuzz', '16', '17', 'fizz', '19', 'buzz', '21', '22', '23', '24', 'buzz', '26', 'fizz', '28', '29', 'fizzbuzz', '31', 'fizz', 'fizz', 'fizz', 'buzz', 'fizz', '37', 'fizz', 'fizz', 'buzz', '41', 'fizz', '43', '44', 'fizzbuzz', '46', '47', 'fizz', '49', 'buzz', 'fizz', '52', '53', 'fizz', 'buzz', '56', 'fizz', '58', '59', 'fizzbuzz', '61', '62', 'fizz', '64', '65', 'fizz', '67', '68', '69', 'buzz', '71', 'fizz', '73', '74', 'fizzbuzz', 'fizz', '77', 'fizz', '79', 'buzz', 'fizz', '82', '83', 'fizz', '85', 'buzz', 'fizz', '88', '89', 'fizzbuzz', '91', '92', '93', '94', 'buzz', 'fizz', '97', 'fizz', 'fizz']\n"
+      "['fizz', '2', 'fizz', 'fizz', 'fizz', 'fizz', '7', '8', 'fizz', 'buzz', '11', 'fizz', '13', '14', 'fizzbuzz', '16', '17', 'fizz', '19', 'fizz', 'fizz', 'fizz', '23', 'fizz', 'buzz', '26', 'fizz', '28', '29', 'fizzbuzz', '31', 'fizz', 'fizz', 'fizz', 'buzz', 'fizz', '37', 'fizz', 'fizz', 'buzz', '41', 'fizz', '43', '44', 'fizzbuzz', '46', '47', 'fizz', '49', 'buzz', 'fizz', '52', '53', 'fizz', 'buzz', '56', 'fizz', '58', '59', 'fizzbuzz', '61', '62', 'fizz', 'fizz', 'fizz', 'fizz', '67', 'fizz', 'fizz', 'fizz', 'fizz', 'fizz', '73', 'fizz', 'fizzbuzz', 'buzz', '77', 'buzz', '79', 'fizz', 'fizz', '82', '83', 'fizz', 'buzz', 'fizz', 'fizz', '88', '89', 'fizzbuzz', '91', '92', 'fizz', '94', 'buzz', 'fizz', '97', 'fizz', 'fizz']\n"
      ]
     }
    ],
